# makemcmasterBOM

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml  skills-lock.json
.cursor/: after-hours-Sources.txt  after-hours-loop.config.json
backend/: config.py  debug_log.py  main.py  notebook_frames.py  notebook_pipeline.py  notebook_utils.py  rate_limit.py
data/: mcmaster_browse_roots.json  mcmaster_catalog.json  mcmaster_categories.json  mcmaster_category_routing.json  mcmaster_metacategories.json  mcmaster_regression_urls.json  mcmaster_site_taxonomy.json  regression_urls.json  sample_bom.csv
docs/: README.md  api.md  architecture.md  development.md  frontend.md  models.md  notebooks.md  security.md  style-guide.md  testing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
notebooks/: 01_scrape.ipynb  02_extract_bom.ipynb  03_parse_bom.ipynb  04_match_mcmaster.ipynb  05_api_payload.ipynb  06_regression.ipynb  jupyter_lab_config.py  mcmaster_browse.ipynb
scripts/: check_bom_quantities.py  check_bom_specifications.py  check_catalog_integrity.py  check_hardware_specs.py  cleanup.sh  crawl_mcmaster_taxonomy.py  dev.sh  mcmaster_browse_example.py  mcmaster_cross_test.py  parse_description_bom.py  parse_description_bom.sh  run_checks.sh  run_monthly_taxonomy_crawl.sh  uninstall.sh
tests/: conftest.py  guardrails.py  test_api.py  test_bolt_length_regressions.py  test_bom_history.py  test_browse_finish_hydrate.py  test_browse_web_first.py  test_catalog_integrity.py  test_category_coverage.py  (+47 more)
(+186 files in other folders)
