[project]
name = "makerworld-bom"
version = "0.1.0"
description = "MakerWorld BOM to McMaster-Carr link generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.18",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "jupyterlab>=4.3.0",
    "jupyter-server>=2.14.0",
    "ipykernel>=6.29.0",
]
playwright = [
    "playwright>=1.49.0",
    "playwright-stealth==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live network tests against MakerWorld (deselect with -m 'not integration')",
]
filterwarnings = [
    "error::DeprecationWarning:backend.*",
]
